# obscura-gateway

./: .dockerignore  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: release.yml
docker/: entrypoint.sh
scripts/: install-obscura-cli.sh
skills/obscura-cli/: SKILL.md
skills/obscura-cli/references/: cdp-proxy-troubleshooting.md  cli.md  sessions-profiles-cookies.md
skills/obscura-gateway/: SKILL.md
skills/obscura-gateway/references/: cdp-proxy-troubleshooting.md  cli.md  gateway-operations.md  gateway-troubleshooting.md  sessions-profiles-cookies.md
src/: config.rs  cookies.rs  db.rs  gateway.rs  install.rs  lib.rs  main.rs  models.rs  server.rs
tests/: events_grants_artifacts_smoke.rs  live_non_proxy_concurrency.rs  live_smoke.rs  negative_restart_smoke.rs
