[package]
name = "obscura-gateway"
version = "0.2.1"
edition = "2024"
license = "MIT"

[[bin]]
name = "obscura-gateway"
path = "src/main.rs"

[[bin]]
name = "obscura-cli"
path = "src/bin/obscura-cli.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
futures-util = "0.3"
hmac = "0.12"
http = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.23"
